--- a/src/core/templates/site/create_plan.html
+++ b/src/core/templates/site/create_plan.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Page Title</title>
-</head>
-<body>
+{% extends 'site/base.html' %}
+
+{% block body %}
   <h2>Administrador Financeiro</h2>
   <h1>Plano de assinatura</h1>
 
@@ -18,5 +14,4 @@
 
     <button type="submit">Salvar</button>
   </form>
-</body>
-</html>
+{% endblock body %}
