Movido app 'core' para 'AdminFinanceiro'
- Melhora organizaçao (modularizaçao) do codigo.
- Implementa as funcionalidades de CRUD sobre a tabela Plan
- Açoes dentro do app restritas ao AdminFinanceiro

[FIX #50]
[FIX #61]
[FIX #51]
[FIX #62]

--- a/src/AdminFinanceiro/templates/site/update_plan.html
+++ b/src/AdminFinanceiro/templates/site/update_plan.html
@@ -7,7 +7,7 @@
   <form method="POST" action="{% url 'update_plan' plan.id %}">
     {% csrf_token %}
     <label for="name">Nome:</label>
-    <input id="name" name="name" type="text" value="{{ plan.plan_name }}">
+    <input id="name" name="name" type="text" value="{{ plan.name }}">
 
     <label for="price">Valor:</label>
     <input id="price" name="price" type="text" value="{{ plan.price }}">
