--- a/src/AdminFinanceiro/templates/site/list_all_plans.html
+++ b/src/AdminFinanceiro/templates/site/list_all_plans.html
@@ -13,7 +13,7 @@
     </tr>
     {% for plan in plans %}
       <tr>
-        <td>{{ plan.plan_name }}</td>
+        <td>{{ plan.name }}</td>
         <td>{{ plan.price }}</td>
         <td><a href="{% url 'update_plan' plan.id %}">Modificar</a></td>
         <td><a href="{% url 'delete_plan' plan.id %}">Excluir</a></td>
