Corrigido preenchimento de data na tela de modificar cliente
Formatado campo para preencher valor salvo do BD.

--- a/src/Atendente/templates/site/update_client.html
+++ b/src/Atendente/templates/site/update_client.html
@@ -16,7 +16,7 @@
     <input id="rg" name="rg" type="text" value="{{ client.person.rg }}">
 
     <label for="birthday">Data de nascimento:</label>
-    <input id="birthday" name="birthday" type="date" value="{{ client.person.birthday }}">
+    <input id="birthday" name="birthday" type="date" value="{{ client.person.birthday | date:'Y-m-d' }}">
 
     <label for="address">Endereço:</label>
     <input id="address" name="address" type="text" value="{{ client.person.address }}">
