--- a/src/Atendente/templates/site/update_client.html
+++ b/src/Atendente/templates/site/update_client.html
@@ -34,4 +34,6 @@
 
     <button type="submit">Salvar</button>
   </form>
+
+  <a href="{% url 'cancel_subscription' client.id %}">Cancelar assinatura</a>
 {% endblock body %}
