--- a/src/Base/templates/site/base.html
+++ b/src/Base/templates/site/base.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel='stylesheet' href="{% static 'style.css' %}">
   <title>SysAdmin</title>
 </head>
 <body>
