--- a/src/Base/templates/site/base.html
+++ b/src/Base/templates/site/base.html
@@ -1,13 +1,36 @@
 {% load static %}
-
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <link rel='stylesheet' href="{% static 'style.css' %}">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel='stylesheet' href="{% static 'css/bootstrap.min.css' %}">
   <title>SysAdmin</title>
 </head>
-<body>
-  {% block body %}{% endblock body %}
+<body>  
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2 class="mt-5 text-right">
+          <small class="text-muted">{% block user_title %}{% endblock user_title %}</small>
+        </h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h1 class="mt-2 text-left">{% block frame_title %}{% endblock frame_title %}</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="container">
+          {% block body %}{% endblock body %}
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="{% static 'js/jquery.slim.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
