--- a/src/AdminFinanceiro/templates/site/list_all_plans.html
+++ b/src/AdminFinanceiro/templates/site/list_all_plans.html
@@ -1,22 +1,34 @@
 {% extends 'site/base.html' %}
 
+{% block user_title %}
+  Administrador Financeiro
+{% endblock user_title %}
+
+{% block frame_title %}
+  Planos de assinatura
+{% endblock frame_title %}
+
 {% block body %}
-  <h2>Administrador Financeiro</h2>
-  <h1>Planos de assinatura</h1>
+  <div class="row">
+    <div class="col">
+      <p class="text-center">
+        <a class="btn btn-primary mt-4" href="{% url 'create_plan' %}">Adicionar Novo</a>
+      </p>
+    </div>
+  </div>
 
-  <a href="{% url 'create_plan' %}">Adicionar Novo</a>
-
-  <table>
+  <table class="table table-hover mt-3">
     <tr>
       <th>Nome</th>
       <th>Valor</th>
+      <th class="text-center" colspan="2">Ação</th>
     </tr>
     {% for plan in plans %}
       <tr>
         <td>{{ plan.name }}</td>
-        <td>{{ plan.price }}</td>
-        <td><a href="{% url 'update_plan' plan.id %}">Modificar</a></td>
-        <td><a href="{% url 'delete_plan' plan.id %}">Excluir</a></td>
+        <td>R$ {{ plan.price }}</td>
+        <td class="text-center"><a class="mt-2" href="{% url 'update_plan' plan.id %}">Modificar</a></td>
+        <td class="text-center"><a href="{% url 'delete_plan' plan.id %}">Excluir</a></td>
       </tr>
     {% endfor %}
   </table>
