Aprimorado webdesign da tela listar clientes

--- a/src/Atendente/templates/site/list_all_clients.html
+++ b/src/Atendente/templates/site/list_all_clients.html
@@ -1,21 +1,33 @@
 {% extends 'site/base.html' %}
 
+{% block user_title %}
+  Atendente
+{% endblock user_title %}
+
+{% block frame_title %}
+  Clientes
+{% endblock frame_title %}
+
 {% block body %}
-  <h2>Atendente</h2>
-  <h1>Clientes</h1>
+  <div class="row">
+    <div class="col">
+      <p class="text-center">
+        <a class="btn btn-primary mt-4" href="{% url 'create_client' %}">Cadastrar Novo Cliente</a>
+      </p>
+    </div>
+  </div>
 
-  <a href="{% url 'create_client' %}">Cadastrar Novo Cliente</a>
-
-  <table>
+  <table class="table table-hover mt-3">
     <tr>
       <th>Cliente</th>
       <th>CPF</th>
+      <th class="text-center">Ação</th>
     </tr>
     {% for client in clients %}
       <tr>
         <td>{{ client.person.name }}</td>
         <td>{{ client.person.cpf }}</td>
-        <td><a href="{% url 'update_client' client.id %}">Editar dados cadastrais</a></td>
+        <td class="text-center"><a href="{% url 'update_client' client.id %}">Editar dados cadastrais</a></td>
       </tr>
     {% endfor %}
   </table>
